@@ -4,6 +4,8 @@ import com.example.symptomchecker.model.Condition;
 import org.springframework.stereotype.Repository;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
+import software.amazon.awssdk.enhanced.dynamodb.model.PageIterable;
+import software.amazon.awssdk.enhanced.dynamodb.model.ScanEnhancedRequest;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,7 +16,7 @@ public class ConditionsRepository {
     private final DynamoDbTable<Condition> conditionTable;
 
     public ConditionsRepository(DynamoDbEnhancedClient dynamoDbEnhancedClient) {
-        this.conditionTable = dynamoDbEnhancedClient.table("Conditions", Condition.TABLE_SCHEMA);
+        this.conditionTable = dynamoDbEnhancedClient.table("Conditions", Condition.getTableSchema());
     }
 
     public void saveCondition(Condition condition) {
@@ -22,7 +24,7 @@ public class ConditionsRepository {
     }
 
     public List<Condition> getAllConditions() {
-        return conditionTable.scan().items().stream().collect(Collectors.toList());
+        return conditionTable.scan().items().stream().toList();
     }
 }
 
